# crypto-exchange-dashboard

./: .gitignore  README.md  config.py  manage.py  pyproject.toml
app/main/: __init__.py  config.py
app/main/controllers/: portfolio_routes.py  routes.py  user_routes.py
app/main/models/: models.py  portfolio.py  user.py
app/main/services/: portfolio_service.py  position_service.py  user_service.py
app/main/views/: dash.html  index.html
app/main/views/partials/: footer.html  navbar.html  scripts.html
app/test/: base.py  test_config.py  test_portfolio.py  test_positions.py  test_user.py  util.py
server/: app.py  main.py  routes.py
server/main/: __init__.py  config.py
server/main/controllers/: routes.py
server/main/models/: models.py  user.py
server/main/models/data/: CCXT_data_provider.py
server/main/services/: user_service.py
server/main/views/dash/: dash.py  demo.py
server/models/data/: base.py
server/test/: base.py  test_config.py
