[tool.poetry]
name = "crypto-exchange-dashboard"
version = "0.1.0"
description = "Aggregate the asset info from different crypto exchanges"
authors = ["tiziaco <tiziano.iaco@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.2"
numpy = "^1.26.1"
plotly = "^5.18.0"
flask = "^3.0.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
